2012-01-19  John D. Ramsdell  <ramsdell@mitre.org>

	* configure.ac: Corrected the NO_LUA test.

2012-01-18  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.lua.in, COPYING.LIB: Fixed the address of the Free
	Software Foundation.

	* datalog.1: Added a manual page.

2011-09-30  John D. Ramsdell  <ramsdell@mitre.org>

	* CVS: Tagged as datalog-1_7.

2011-09-29  John D. Ramsdell  <ramsdell@mitre.org>

	* Makefile.am (lib_LTLIBRARIES): Added support for shared
	libraries via libtool.  The default is static libraries.

2011-09-27  John D. Ramsdell  <ramsdell@mitre.org>

	* configure.ac, Makefile.am, datalog.spec.in: Added --with-lua
	option and when specified, use the installed lua package.

	* acinclude.m4: Changed to be GNU's ax_lua.m4.

2011-09-22  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.spec.in (BuildRequires): Added build dependency on
	texinfo.

2011-09-20  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.spec.in (Release): Removed devel packages and bumped
	release number to 2.

2011-07-05  John D. Ramsdell  <ramsdell@mitre.org>

	* CVS: Tagged as datalog-1_6.

	* lua/*: Applied patch http://www.lua.org/ftp/patch-lua-5.1.4-3.

	* datalog.spec.in:  Added changelog and SMP make flags.

2011-07-01  John D. Ramsdell  <ramsdell@mitre.org>

	* loader.c (addstr): Corrected the computation of the mark for a
	quoted constant that spans multiple buffers.  When reading a
	quoted string that spans multiple buffers, bytes were lost.  This
	fixes a reader bug reported by Georges Louis.

2010-05-27  John D. Ramsdell  <ramsdell@mitre.org>

	* CVS: Tagged as datalog-1_5.

	* interp.c (getaline): Rename function from getline to avoid
	conflict with the one in <stdio.h>.

2009-03-30  John D. Ramsdell  <ramsdell@mitre.org>

	* CVS: Tagged as datalog-1_4.

	* datalog.c (dl_ask): Added forgotten pop of the answer array so
	as to fix a space leak reported by Faisal Alquaddoomi.

	* Updated Lua sources to version 5.1.4.
